[build-system]
requires = ["setuptools>=64", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbs-tui"
# version = "0.1.0"
dynamic = ["version"]
description = "Textual TUI dashboard for monitoring PBS Pro schedulers"
readme = "README.md"
authors = [
  {name = "Sam Foreman", email = "foremans@anl.gov" },
  {name = "Argonne Leadership Computing Facility"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "textual>=0.48.0",
]

[project.optional-dependencies]
dev = [
    "textual[dev]",
]

[project.scripts]
pbs-tui = "pbs_tui.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["pbs_tui", "pbs_tui/app.tcss"]
