[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "pbs-tui"
version = "0.1.0"
# dynamic = ["version"]
description = "Textual TUI dashboard for monitoring PBS Pro schedulers"
readme = "README.md"
authors = [
  {name = "Sam Foreman", email = "foremans@anl.gov" },
  {name = "Argonne Leadership Computing Facility"}
]
requires-python = ">=3.10"
dependencies = [
    "textual",
]

[project.scripts]
pbs-tui = "pbs_tui.app:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["pbs_tui", "pbs_tui/app.tcss"]
